# ether

./: .gitignore  001_initial.sql  ARCHITECTURE.md  LibraryPage.tsx  LiveAssistPage.tsx  SETUP.md  add-dialog-v2.js  announcements.js  audio-devices.js  audio-processing.js  auto-advance.js  auto-crossfade.js  autostart.js  better-grid.js  big-carts-v2.js  big-carts.js  cart-2rows.js  cart-wall.js  categories.js  clean-carts.js  clean-import.js  collapse-carts.js  color-queue.js  continuous.js  create-missing.js  cue-editor.js  delete-track.js  delete-v2.js  drag-drop-queue (1).js  drag-drop-queue.js  drag-drop-v2.js  engine.ts  ether-update.js  fix-app.js  fix-artist-query.js  fix-artist-query2.js  fix-artists.js  fix-audio-build.js  fix-autox.js  fix-bugs.js  (+88 more)
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/audio/: engine.ts  id3.ts  loggen.ts  processor.ts
src/components/: Announcements.tsx  AppShell.tsx  AudioDevices.tsx  CartWall.tsx  CueEditor.tsx  FirstRunWizard.tsx  ImportDialog.tsx  JockStrip.tsx  Logs.tsx  NowPlaying.tsx  NowPlayingSettings.tsx  NowPlayingWindow.tsx  OnAirDeck.tsx  ProcessingPanel.tsx  RulesEditor.tsx  Scheduler.tsx  SplashScreen.tsx  Spots.tsx  StreamManager.tsx  UpNext.tsx  VoiceTracker.tsx  Waveform.tsx
src/db/: client.ts
