[package]
name = "openair"
version = "0.1.0"
edition = "2021"
description = "Free broadcast automation"

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
